syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

option go_package = "../api-gateway/proto";

service AuthService {
    rpc Login(LoginRequest) returns (UserResponse);
    rpc Signup(SignupRequest) returns (UserResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message SignupRequest {
    string firstName = 1;
    string lastName = 2;
    string userName = 3;
    string email = 4;
    string password = 5;
}

message UserResponse {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string userName = 4;
    string email = 5;
    string token = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}