// Original file: proto/auth.proto


export interface SignupRequest {
  'firstName'?: (string);
  'lastName'?: (string);
  'userName'?: (string);
  'email'?: (string);
  'password'?: (string);
}

export interface SignupRequest__Output {
  'firstName'?: (string);
  'lastName'?: (string);
  'userName'?: (string);
  'email'?: (string);
  'password'?: (string);
}
